--- a/eduservice/src/main/resources/application.properties
+++ b/eduservice/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8101
 
 # 服务名
-spring.application.name=eduonline-edu
+spring.application.name=eduservice
 
 # 环境设置：dev、test、prod
 spring.profiles.active=dev
