--- a/eduoss/src/main/resources/application.properties
+++ b/eduoss/src/main/resources/application.properties
@@ -12,3 +12,6 @@ aliyun.oss.file.keyId=LTAI4FqV5SfPHLf553yCN5ti
 aliyun.oss.file.keySecret=e2Hr8dmhsLtGkfjI6P7EMmXH2oOxBp
 #bucket可以在控制台创建，也可以使用java代码创建
 aliyun.oss.file.bucketName=edu-teacher-2020
+
+#存储头像文件夹
+aliyun.oss.file.head=career
