--- a/eduservice/src/main/resources/application.properties
+++ b/eduservice/src/main/resources/application.properties
@@ -44,3 +44,6 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #json时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
+
+#配置mapper xml文件的路径
+mybatis-plus.mapper-locations=classpath:com/eduonline/eduservice/mapper/xml/*.xml
