功能基本完成

--- a/eduoss/src/main/resources/application.properties
+++ b/eduoss/src/main/resources/application.properties
@@ -15,3 +15,9 @@ aliyun.oss.file.bucketName=edu-teacher-2020
 
 #存储头像文件夹
 aliyun.oss.file.head=career
+
+#指定注册中心地址
+eureka.client.service-url.defaultZone=http://127.0.0.1:9002/eureka/
+
+#eureka上传获取的是服务器id地址 否则是主机名
+eureka.instance.prefer-ip-address=true
