--- a/eduservice/src/main/resources/application.properties
+++ b/eduservice/src/main/resources/application.properties
@@ -47,3 +47,12 @@ spring.jackson.time-zone=GMT+8
 
 #配置mapper xml文件的路径
 mybatis-plus.mapper-locations=classpath:com/eduonline/eduservice/mapper/xml/*.xml
+
+#指定注册中心地址
+eureka.client.service-url.defaultZone=http://127.0.0.1:9002/eureka/
+
+#eureka上传获取的是服务器id地址 否则是主机名
+eureka.instance.prefer-ip-address=true
+
+
+
