--- a/eduoss/pom.xml
+++ b/eduoss/pom.xml
@@ -45,5 +45,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- 注册客户端 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
