功能基本完成

--- a/eduvideo/src/main/resources/application.properties
+++ b/eduvideo/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.application.name=eduvideo
 spring.profiles.active=dev
 
 #阿里云key
-aliyun.oss.file.keyId=LTAI4FqV5SfPHLf553yCN5ti
-aliyun.oss.file.keySecret=e2Hr8dmhsLtGkfjI6P7EMmXH2oOxBp
+aliyun.oss.file.keyId=
+aliyun.oss.file.keySecret=
 
 #设置上传文件限制大小
 #单个文件最大 1g
