--- a/eduoss/src/main/resources/application.properties
+++ b/eduoss/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.profiles.active=dev
 
 #配置阿里云oss
 #不同的服务器，地址不同
-aliyun.oss.file.endpoint=oss-cn-beijing.aliyuncs.com
-aliyun.oss.file.keyId=LTAI4FqV5SfPHLf553yCN5ti
-aliyun.oss.file.keySecret=e2Hr8dmhsLtGkfjI6P7EMmXH2oOxBp
+aliyun.oss.file.endpoint=
+aliyun.oss.file.keyId=
+aliyun.oss.file.keySecret=
 #bucket可以在控制台创建，也可以使用java代码创建
-aliyun.oss.file.bucketName=edu-teacher-2020
+aliyun.oss.file.bucketName=
 
 #存储头像文件夹
 aliyun.oss.file.head=career
