--- a/eduoss/src/main/resources/application.properties
+++ b/eduoss/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.profiles.active=dev
 
 #配置阿里云oss
 #不同的服务器，地址不同
-aliyun.oss.file.endpoint=
-aliyun.oss.file.keyId=
-aliyun.oss.file.keySecret=
+aliyun.oss.file.endpoint=地域节点
+aliyun.oss.file.keyId=id
+aliyun.oss.file.keySecret=key
 #bucket可以在控制台创建，也可以使用java代码创建
-aliyun.oss.file.bucketName=
+aliyun.oss.file.bucketName=你的文件夹名
 
 #存储头像文件夹
 aliyun.oss.file.head=career
