--- a/eduvideo/src/main/resources/application.properties
+++ b/eduvideo/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.application.name=eduvideo
 spring.profiles.active=dev
 
 #阿里云key
-aliyun.oss.file.keyId=
-aliyun.oss.file.keySecret=
+aliyun.oss.file.keyId=id
+aliyun.oss.file.keySecret=key
 
 #设置上传文件限制大小
 #单个文件最大 1g
